<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="My Dashboard"
            android:textColor="@color/orange"
            android:textSize="30sp" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="4">


            <androidx.cardview.widget.CardView
                android:id="@+id/heartCard"
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/heartbeat"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/heartbeat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/heart"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tempCard"
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/temperature"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/temperature" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/temperature"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ecgCard"
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/ecg"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/ecg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/ecg"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/oxyCardView"
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/saturation"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/saturation" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/saturation"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/respirationCard"
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/respiration"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/respiration" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/respiration"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bloodpressureCard"
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/bp1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/bp1" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/bp"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>